# KokoroMemo

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  TODO.md  build-backend.cmd  config.example.yaml  dev.cmd  pyproject.toml  requirements.txt  项目设计.md
.github/workflows/: ci.yml  release.yml
app/: _version.py  main.py
app/api/: routes_admin.py  routes_openai.py  routes_ws.py
app/core/: config.py  events.py  ids.py  logging.py  prompts.py  services.py  state.py  time_util.py  variables.py
app/importers/: __init__.py  sillytavern.py
app/memory/: card_extractor.py  card_injector.py  card_retriever.py  conversation_policy.py  extractor.py  graph.py  injector.py  judge.py  query_builder.py  retrieval_gate.py  retriever.py  review_policy.py  state_filler.py  state_injector.py  state_projector.py  state_renderer.py  state_schema.py  state_table_filler.py  state_table_renderer.py  state_updater.py  summaries.py
app/providers/: embedding_base.py  embedding_dummy.py  embedding_openai_compatible.py  (+3 more)
gui/: index.html  package-lock.json  package.json
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
requirements/: android-proot-ubuntu.txt  android-termux.txt
scripts/: termux-setup.sh  ubuntu-setup.sh
tests/: test_admin_state_api.py  test_conversation_policy.py  test_hot_context.py  test_hot_context_pipeline.py  test_inbox_review_api.py  test_memory_core.py  test_port_detection.py  test_regression.py  test_sqlite_vector_store.py  test_v0_5_features.py
(+57 files in other folders)
